# semnet

./: .coverage  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  conf.py  examples.md  index.md  parameters.md  quickstart.md  requirements.txt
docs/_build/html/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/semnet/: semnet.html
docs/_build/html/_sources/: index.md.txt  installation.md.txt
docs/_static/: .gitkeep  custom.css
examples/: basic_example.py  blocking_example.py  custom_embeddings_example.py  docs_charts.ipynb  examples.ipynb  grid_search_example.py  news_titles.ipynb  pandas_export_example.py  quickstart.ipynb  quotes.ipynb  quotes_edges.csv  quotes_edges_big.csv  quotes_nodes.csv  quotes_nodes_big.csv  test_data.csv
examples/data/: ground_truth.csv  quickstart.ipynb
src/semnet/: __init__.py  semnet.py
tests/: test_semantic_network.py
